--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@ button{width:100%;padding:12px;background:linear-gradient(135deg,#ff0055,#ff3c7d
 .download-row{display:flex;gap:6px;margin-bottom:6px}
 .download-row input{flex:1}
 .download-row button{width:42px}
-.preview-btn{background:#ff0055;padding:10px;border-radius:10px;margin-top:6px;text-align:center;font-weight:600;cursor:pointer}
+.preview-btn{background:#ff0055;padding:10px;border-radius:10px;margin-top:6px;text-align:center;font-weight:600}
 </style>
 </head>
 <body>
@@ -30,8 +30,6 @@ button{width:100%;padding:12px;background:linear-gradient(135deg,#ff0055,#ff3c7d
 
 <input id="titleInput" placeholder="Judul video">
 <input id="stream" placeholder="Link stream video">
-
-<!-- TAMBAHAN: Input ID Manual -->
 <input id="manualID" placeholder="Masukkan ID (boleh teks/angka)">
 
 <div class="small">Tombol Download</div>
@@ -57,11 +55,13 @@ button{width:100%;padding:12px;background:linear-gradient(135deg,#ff0055,#ff3c7d
 </div>
 
 <script>
+/* ================= CONFIG ================= */
 const API = '/videos';
+const PUBLIC_DOMAIN = 'https://narapoi.page.dev'; // 🔥 FIX DOMAIN FINAL
 const $ = id => document.getElementById(id);
 let editIndex = null;
 
-// ===== DOWNLOAD FIELD =====
+/* ============== DOWNLOAD FIELD ============== */
 function addDownload(label='', url=''){
   const d = document.createElement('div');
   d.className = 'download-row';
@@ -73,7 +73,7 @@ function addDownload(label='', url=''){
 }
 addDownload();
 
-// ===== GENERATE =====
+/* ================= GENERATE ================= */
 function generate(){
   const title = $('titleInput').value.trim();
   const src = $('stream').value.trim();
@@ -84,46 +84,42 @@ function generate(){
     if(r.children[1].value)
       downloads.push({label:r.children[0].value||'Download', url:r.children[1].value});
   });
-
   if(!downloads.length) downloads.push({label:'Download', url:src});
 
-  // ===== MANUAL ID =====
   let id = $('manualID').value.trim();
   if(!id) id = 'vid_' + Date.now().toString(36) + Math.random().toString(36).slice(2,5);
 
-  // ===== VALIDASI ID UNIK =====
   const h = JSON.parse(localStorage.getItem('history')||'[]');
   const idExists = h.some(o => Object.keys(o)[0] === id);
-  if(idExists && editIndex === null) return alert('ID sudah digunakan, gunakan ID lain!');
+  if(idExists && editIndex === null) return alert('ID sudah digunakan');
 
   const data = { [id]: { title, src, downloads } };
 
   $('json').value = JSON.stringify(data,null,2);
-  $('link').value = location.origin + '/?v=' + id;
+  $('link').value = PUBLIC_DOMAIN + '/?v=' + id; // 🔥 FIXED
 
   renderPreview(data[id]);
 
-  // === SAVE TO KV ===
-  fetch(API, {
+  fetch(API,{
     method:'POST',
     headers:{'Content-Type':'application/json'},
     body:JSON.stringify(data)
   });
 
-  // ===== HISTORY =====
-  editIndex !== null ? (h[editIndex] = data) : (h.unshift(data));
+  editIndex !== null ? (h[editIndex] = data) : h.unshift(data);
   editIndex = null;
   localStorage.setItem('history', JSON.stringify(h.slice(0,10)));
   renderHistory();
 }
 
-// ===== PREVIEW =====
+/* ================= PREVIEW ================= */
 function renderPreview(v){
-  $('preview').innerHTML = `<b>${v.title}</b>` +
+  $('preview').innerHTML =
+    `<b>${v.title}</b>` +
     v.downloads.map(d=>`<div class="preview-btn">${d.label}</div>`).join('');
 }
 
-// ===== COPY =====
+/* ================= COPY ================= */
 function copyText(id){
   const el = $(id);
   if(!el.value) return alert('Kosong');
@@ -132,7 +128,7 @@ function copyText(id){
   alert('Disalin');
 }
 
-// ===== HISTORY =====
+/* ================= HISTORY ================= */
 function renderHistory(){
   const h = JSON.parse(localStorage.getItem('history')||'[]');
   $('history').innerHTML = '';
@@ -154,19 +150,19 @@ function editHistory(i){
   const k = Object.keys(o)[0], v=o[k];
   $('titleInput').value = v.title;
   $('stream').value = v.src;
-  $('manualID').value = k; // restore ID saat edit
+  $('manualID').value = k;
   $('downloads').innerHTML = '';
   v.downloads.forEach(d=>addDownload(d.label,d.url));
   renderPreview(v);
   editIndex = i;
 }
 
-// ===== DELETE (KV + LOCAL) =====
+/* ================= DELETE ================= */
 function del(i){
   const h = JSON.parse(localStorage.getItem('history'));
   const id = Object.keys(h[i])[0];
 
-  fetch(API, {
+  fetch(API,{
     method:'DELETE',
     headers:{'Content-Type':'application/json'},
     body:JSON.stringify({id})
