--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{
   padding:14px;
 }
 .hidden{display:none}
+
 h1{font-size:18px;margin:6px 0}
 .stats{
   display:flex;
@@ -94,6 +95,7 @@ video{
   display:flex;
   align-items:center;
   justify-content:center;
+  cursor:pointer;
 }
 .ctrl svg{width:22px;height:22px;fill:#fff}
 
@@ -105,12 +107,14 @@ video{
   display:flex;
   align-items:center;
   justify-content:center;
+  cursor:pointer;
 }
 .play-btn svg{width:34px;height:34px;fill:#fff}
 
 select{
   width:40px;height:40px;
   background:#111827;
+  border:1px solid #1f2937;
   color:#fff;
   border-radius:10px;
 }
@@ -121,10 +125,13 @@ select{
   padding:14px;
   border-radius:12px;
   background:#111827;
+  border:1px solid #1f2937;
   color:#fff;
   font-weight:600;
+  cursor:pointer;
 }
 
+/* POPUP */
 .popup{
   position:fixed;
   inset:0;
@@ -153,6 +160,7 @@ select{
   padding:12px;
   border-radius:10px;
   background:#111827;
+  border:1px solid #1f2937;
   color:#fff;
   text-decoration:none;
 }
@@ -183,12 +191,21 @@ select{
 </div>
 
 <div class="controls">
-  <div id="fs" class="ctrl">⛶</div>
-  <div id="rewind" class="ctrl">⏪</div>
+  <div id="fs" class="ctrl">
+    <svg viewBox="0 0 24 24"><path d="M7 14H5v5h5v-2H7v-3zm10 0h-2v3h-3v2h5v-5zM7 7h3V5H5v5h2V7zm12 3V5h-5v2h3v3h2z"/></svg>
+  </div>
 
-  <button id="playBtn" class="play-btn">▶</button>
+  <div id="rewind" class="ctrl">
+    <svg viewBox="0 0 24 24"><path d="M11 18V6L2.5 12z"/></svg>
+  </div>
 
-  <div id="forward" class="ctrl">⏩</div>
+  <button id="playBtn" class="play-btn">
+    <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+  </button>
+
+  <div id="forward" class="ctrl">
+    <svg viewBox="0 0 24 24"><path d="M13 6v12l8.5-6z"/></svg>
+  </div>
 
   <select id="speed">
     <option value="1">1x</option>
@@ -209,7 +226,7 @@ select{
 </div>
 
 <script>
-/* ===== ELEMENT BINDING (FIX UTAMA) ===== */
+/* ===== ELEMENT BINDING ===== */
 const app = document.getElementById('app');
 const title = document.getElementById('title');
 const player = document.getElementById('player');
@@ -232,17 +249,16 @@ fetch('/videos').then(r=>r.json()).then(videos=>{
   if(!id || !videos[id]) return;
 
   const v = videos[id];
-
   app.classList.remove('hidden');
   title.textContent = v.title;
   player.src = v.src;
-  player.load(); // 🔥 FIX MOBILE
+  player.load();
 
   playBtn.onclick=()=>player.paused?player.play():player.pause();
-  rewind.onclick=()=>player.currentTime-=5;
-  forward.onclick=()=>player.currentTime+=5;
-  fs.onclick=()=>player.requestFullscreen();
-  speed.onchange=e=>player.playbackRate=e.target.value;
+  rewind.onclick=()=>player.currentTime=Math.max(0,player.currentTime-5);
+  forward.onclick=()=>player.currentTime=Math.min(player.duration,player.currentTime+5);
+  fs.onclick=()=>!document.fullscreenElement?player.requestFullscreen():document.exitFullscreen();
+  speed.onchange=e=>player.playbackRate=parseFloat(e.target.value);
 
   openFull.onclick=()=>{
     popupBox.innerHTML='';
