--- a/index.html
+++ b/index.html
@@ -6,275 +6,70 @@
 <title>Stream</title>
 
 <style>
-:root{
-  --bg:#05060f;
-  --panel:#0b1020;
-  --accent:#3b82f6;
-  --text:#e5e7eb;
-  --muted:#9ca3af;
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  background:var(--bg);
-  color:var(--text);
-  font-family:system-ui,Segoe UI,Inter,Arial;
-}
+body{margin:0;background:#05060f;color:#e5e7eb;font-family:system-ui}
 .wrap{max-width:720px;margin:auto;padding:14px}
-.card{
-  background:linear-gradient(180deg,#0b1020,#060814);
-  border-radius:14px;
-  padding:14px;
-}
+.card{background:#0b1020;border-radius:14px;padding:14px}
 .hidden{display:none}
-
-h1{font-size:18px;margin:6px 0}
-.stats{
-  display:flex;
-  gap:16px;
-  font-size:12px;
-  color:var(--muted);
-}
-.online{display:flex;align-items:center;gap:6px}
-.dot{
-  width:8px;height:8px;border-radius:50%;
-  background:#22ff00;
-  opacity:.2;
-}
-.dot.on{animation:blink 1.2s infinite}
-@keyframes blink{50%{opacity:1}}
-
-video{
-  width:100%;
-  border-radius:14px;
-  background:#000;
-  margin:12px 0;
-}
-
-/* PROGRESS */
-.progress-container{
-  width:100%;
-  height:6px;
-  background:#111827;
-  border-radius:3px;
-  margin-bottom:12px;
-  position:relative;
-}
-.progress-bar{
-  width:0%;
-  height:100%;
-  background:var(--accent);
-}
-.progress-handle{
-  width:12px;height:12px;
-  background:#fff;border-radius:50%;
-  position:absolute;top:50%;
-  transform:translate(-50%,-50%);
-}
-.progress-tooltip{
-  position:absolute;
-  padding:2px 6px;
-  background:#111827;
-  font-size:12px;
-  border-radius:4px;
-  transform:translate(-50%,-150%);
-  display:none;
-}
-
-.controls{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  gap:14px;
-  flex-wrap:wrap;
-}
-.ctrl{
-  width:40px;height:40px;
-  border-radius:10px;
-  background:#111827;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-}
-.ctrl svg{width:22px;height:22px;fill:#fff}
-
-.play-btn{
-  width:72px;height:72px;
-  border-radius:50%;
-  border:none;
-  background:linear-gradient(135deg,var(--accent),#2563eb);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-}
-.play-btn svg{width:34px;height:34px;fill:#fff}
-
-select{
-  width:40px;height:40px;
-  background:#111827;
-  border:1px solid #1f2937;
-  color:#fff;
-  border-radius:10px;
-}
-
-.full-btn{
-  width:100%;
-  margin-top:14px;
-  padding:14px;
-  border-radius:12px;
-  background:#111827;
-  border:1px solid #1f2937;
-  color:#fff;
-  font-weight:600;
-  cursor:pointer;
-}
-
-/* POPUP */
-.popup{
-  position:fixed;
-  inset:0;
-  display:none;
-  justify-content:center;
-  align-items:flex-end;
-  z-index:999;
-}
-.popup.show{display:flex}
-.popup-bg{
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.6);
-}
-.popup-box{
-  position:relative;
-  width:95%;
-  max-width:500px;
-  background:#0b1020;
-  border-radius:16px 16px 0 0;
-  padding:16px;
-}
-.popup-box a{
-  display:block;
-  margin-top:10px;
-  padding:12px;
-  border-radius:10px;
-  background:#111827;
-  border:1px solid #1f2937;
-  color:#fff;
-  text-decoration:none;
-}
+video{width:100%;border-radius:14px;background:#000}
+.error{color:#f87171;font-size:14px;margin-top:10px}
 </style>
 </head>
 
 <body>
-
 <div class="wrap">
-<div id="app" class="card hidden">
-
-<h1 id="title"></h1>
-
-<div class="stats">
-  <div id="views">0 views</div>
-  <div class="online">
-    <div id="dot" class="dot"></div>
-    <span id="onlineText">0 online</span>
+  <div id="app" class="card hidden">
+    <h3 id="title"></h3>
+    <video id="player" controls playsinline></video>
+    <div id="err" class="error"></div>
   </div>
 </div>
 
-<video id="player" playsinline></video>
-
-<div class="progress-container" id="progressContainer">
-  <div id="progress" class="progress-bar"></div>
-  <div id="handle" class="progress-handle"></div>
-  <div id="tooltip" class="progress-tooltip">0:00</div>
-</div>
-
-<div class="controls">
-  <div id="fs" class="ctrl">
-    <svg viewBox="0 0 24 24"><path d="M7 14H5v5h5v-2H7v-3zm10 0h-2v3h-3v2h5v-5zM7 7h3V5H5v5h2V7zm12 3V5h-5v2h3v3h2z"/></svg>
-  </div>
-
-  <div id="rewind" class="ctrl">
-    <svg viewBox="0 0 24 24"><path d="M11 18V6L2.5 12z"/></svg>
-  </div>
-
-  <button id="playBtn" class="play-btn">
-    <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-  </button>
-
-  <div id="forward" class="ctrl">
-    <svg viewBox="0 0 24 24"><path d="M13 6v12l8.5-6z"/></svg>
-  </div>
-
-  <select id="speed">
-    <option value="1">1x</option>
-    <option value="1.25">1.25x</option>
-    <option value="1.5">1.5x</option>
-    <option value="2">2x</option>
-  </select>
-</div>
-
-<button id="openFull" class="full-btn">FULL KONTEN</button>
-
-</div>
-</div>
-
-<div id="popup" class="popup">
-  <div class="popup-bg"></div>
-  <div class="popup-box" id="popupBox"></div>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
 <script>
-/* ===== ELEMENT BINDING ===== */
 const app = document.getElementById('app');
 const title = document.getElementById('title');
 const player = document.getElementById('player');
-const playBtn = document.getElementById('playBtn');
-const rewind = document.getElementById('rewind');
-const forward = document.getElementById('forward');
-const fs = document.getElementById('fs');
-const speed = document.getElementById('speed');
-const openFull = document.getElementById('openFull');
-const popup = document.getElementById('popup');
-const popupBox = document.getElementById('popupBox');
-const views = document.getElementById('views');
-const onlineText = document.getElementById('onlineText');
-const dot = document.getElementById('dot');
+const err = document.getElementById('err');
 
-const FIREBASE='https://views-counter-610fa-default-rtdb.asia-southeast1.firebasedatabase.app';
-const id=new URLSearchParams(location.search).get('v');
+const id = new URLSearchParams(location.search).get('v');
 
-fetch('/videos').then(r=>r.json()).then(videos=>{
-  if(!id || !videos[id]) return;
+fetch('/videos')
+.then(r=>r.json())
+.then(videos=>{
+  if(!id || !videos[id]){
+    err.textContent = 'Video tidak ditemukan';
+    return;
+  }
 
   const v = videos[id];
-  app.classList.remove('hidden');
   title.textContent = v.title;
-  player.src = v.src;
+  app.classList.remove('hidden');
+
+  const src = v.src;
+
+  /* === HLS SUPPORT === */
+  if(src.endsWith('.m3u8')){
+    if(Hls.isSupported()){
+      const hls = new Hls();
+      hls.loadSource(src);
+      hls.attachMedia(player);
+    }else if(player.canPlayType('application/vnd.apple.mpegurl')){
+      player.src = src;
+    }else{
+      err.textContent = 'Browser tidak mendukung HLS';
+    }
+  }else{
+    player.src = src;
+  }
+
   player.load();
+});
 
-  playBtn.onclick=()=>player.paused?player.play():player.pause();
-  rewind.onclick=()=>player.currentTime=Math.max(0,player.currentTime-5);
-  forward.onclick=()=>player.currentTime=Math.min(player.duration,player.currentTime+5);
-  fs.onclick=()=>!document.fullscreenElement?player.requestFullscreen():document.exitFullscreen();
-  speed.onchange=e=>player.playbackRate=parseFloat(e.target.value);
-
-  openFull.onclick=()=>{
-    popupBox.innerHTML='';
-    (v.downloads||[]).forEach(d=>{
-      const a=document.createElement('a');
-      a.href=d.url;
-      a.target='_blank';
-      a.textContent=d.label;
-      popupBox.appendChild(a);
-    });
-    popup.classList.add('show');
-  };
-
-  document.querySelector('.popup-bg').onclick=()=>popup.classList.remove('show');
+/* === ERROR HANDLER === */
+player.addEventListener('error',()=>{
+  err.textContent = 'Video gagal dimuat (format / CORS / server)';
 });
 </script>
-
 </body>
 </html>
